resources/tests/invalid_syntax/fn_call_not_fn.ct
//`'a' is not a function!
//1
var a = 10;

fn hello()->void {
  a();
}